2008-11-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvLine.c:   Replace Tcl_SetResult(interp, NULL, ....)
	* generic/tkEntry.c       calls with Tcl_ResetResult(interp)
	* generic/tkMenu.c
	* generic/tkOldConfig.c
	* win/tkWinTest.c:  eliminate warning: unused variable 'tkwin'

2008-11-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkBind.c:  [Bug 1389270] event generate silently ignored
	* generic/tkFocus.c: focus events. These can now be generated.
	* generic/tkGrab.c:
	* generic/tkInt.h:
	* tests/bind.test: Fixed some locale dependencies in various
	tests to reduce the noise on non-English windows systems.

2008-11-22  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/ctext.tcl: Extended to show off what you can do with
	angled text; there is now a pie selector to change the orientation.

2008-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/combobox.tcl: [Bug 1939129,1991930] combobox dropdown
	                            was drawn behind topmost toplevels.
	* generic/tkCanvText.c:  Fixed up complaints from MSVC engendered
	* generic/tkFont.c:      by the last commit. In particular replaced
	* win/tkWinDraw.c:       round() which is a C99 function.
	* win/tkWinFont.c:

2008-11-22  Donal K. Fellows  <dkf@users.sf.net>

	TIP #119 IMPLEMENTATION

	* generic/tkCanvText.c:  Added -angle configuration option to canvas
	* generic/tkFont.c:	 text items. This required reengineering the
	* library/prolog.ps:	 whole text rendering engine to be able to
	* macosx/tkMacOSXFont.c: handle an angle! No change to any external
	* unix/tkUnixFont.c:	 API. Note, this feature was originally
	* unix/tkUnixRFont.c:	 approved for Tk 8.5, but it has proved much
	* win/tkWinFont.c:	 harder to implement than originally
	* generic/tkInt.h:	 estimated. [Patch 1611359]
	* tests/canvText.test:

2008-11-22  Pat Thoyts	<patthoyts@users.sourceforge.net>

	* test/winDialog.test: Avoid some locale-dependent failures by using