@@ -1,3 +1,10 @@
+2008-11-28  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>
+
+	* generic/tkCanvUtil.c	Millimeter patch. Fixes [1813597,2218964]
+	* generic/tkInt.h	by eliminating the functional redundancy
+	* generic/tkObj.c       and unnecessary loss of precision of the
+	* generic/tkText.c      {pixel,mm}ObjType tandem.
+
 2008-11-27  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tkCanvLine.c:   Replace Tcl_SetResult(interp, NULL, ....)
